--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -10,6 +10,11 @@ path = 'contracts/licensing-agreement.clar'
 clarity_version = 2
 epoch = 2.5
 
+[contracts.research-nft]
+path = 'contracts/research-nft.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.research-registry]
 path = 'contracts/research-registry.clar'
 clarity_version = 2
