--- a/deployments/default.simnet-plan.yaml
+++ b/deployments/default.simnet-plan.yaml
@@ -55,6 +55,11 @@ plan:
             path: contracts/licensing-agreement.clar
             clarity-version: 2
         - emulated-contract-publish:
+            contract-name: research-nft
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/research-nft.clar
+            clarity-version: 2
+        - emulated-contract-publish:
             contract-name: research-registry
             emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
             path: contracts/research-registry.clar
